--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "React-Resume-ES6-Webpack",
+  "homepage": "http://hthoma.github.io/resume",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -68,7 +69,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "jest": {
     "moduleFileExtensions": [
